--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <body>
 		<p>How does this page have a gigantic traffic ? Well, this is a secret and will be shared in 01/01/2024</p>
 		<code>It is not about the domain! It is indeed about the content !</code>
-    </body>
+    
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><code>From the wikipedia:</code>
+  <p><b>Elizabeth II</b> (Elizabeth Alexandra Mary; 21 April 1926 – 8 September 2022) was <a href="https://en.wikipedia.org/wiki/Queen_of_the_United_Kingdom" class="mw-redirect" title="Queen of the United Kingdom">Queen of the United Kingdom</a> from 6&#160;February 1952 until her death.<sup id="cite_ref-constitutional_3-0" class="reference"><a href="#cite_note-constitutional-3">&#91;a&#93;</a></sup> Her reign of 70 years and 214 days was the <a href="https://en.wikipedia.org/wiki/List_of_monarchs_in_Britain_by_length_of_reign" title="List of monarchs in Britain by length of reign">longest of any British monarch</a> and the <a href="https://en.wikipedia.org/wiki/List_of_longest-reigning_monarchs" title="List of longest-reigning monarchs">second-longest recorded</a> of any monarch of a sovereign country. At the time of her death, Elizabeth was queen of fourteen other <a href="https://en.wikipedia.org/wiki/Commonwealth_realm" title="Commonwealth realm">Commonwealth realms</a> in addition to the UK.<sup id="cite_ref-realms_4-0" class="reference"><a href="#cite_note-realms-4">&#91;b&#93;</a></sup> </p>
+  </body>
 </html>
